--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ async function enviarMensaje() {
 
   try {
     // Llamar a tu backend en Glitch
-    const response = await fetch("https://edurbaez.glitch.me/chat", {
+    const response = await fetch("https://eddward.glitch.me/chat", {
       method: "POST",
       headers: {
         "Content-Type": "application/json"
